# universal_harvester

./: .gitignore  README.md  analyze_project.py  bootstrap.py  capture_auth.py  cluster_topics.py  cookie_validator.py  dashboard.py  db.py  export_cookies.py  find_broken.py  health_check.py  ingest_json_to_db.py  install_universal_harvester.bat  pyproject.toml  repair_env.ps1  requirements.txt  run.py  run_auto.py  run_batch.py  run_pipeline.py  search_cli.py  setup.bat  topic_browser_gui.py  validate_modules.py  visualize_tree.py
dashboard/: index.html  server.py
docs/: autonomy_loop_spec.md  autonomy_safety_doctrine.md  autonomy_stress_test_plan.md  cockpit_autonomy_monitor_spec.md  cockpit_certification_exam.md  cockpit_corpus_intelligence_panel_spec.md  cockpit_document_viewer_spec.md  cockpit_evidence_panel_spec.md  cockpit_global_dashboard_spec.md  cockpit_global_intelligence_spec.md  cockpit_knowledge_graph_panel_spec.md  cockpit_memory_graph_panel_spec.md  cockpit_mission_execution_panel_spec.md  cockpit_mission_generator_spec.md  cockpit_mission_orchestration_spec.md  cockpit_mission_panel_spec.md  cockpit_operator_console_spec.md  cockpit_operator_workflow_spec.md  cockpit_remittance_panel_spec.md  cockpit_system_health_panel_spec.md  cockpit_timeline_panel_spec.md  corpus_ingestion_pipeline_spec.md  corpus_intelligence_layer_spec.md  database_schema_spec.md  harvester_schema_spec.md  knowledge_base_procurement_test_plan.md  mission_router_spec.md  operator_training_curriculum.md  package_layout_spec.md  remittance_parser_spec.md  sovereign_codex.md  (+10 more)
(+78 files in other folders)
