[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "universal_harvester"
version = "0.1.0"
description = "A comprehensive Copilot conversation harvester."
dependencies = [
    "playwright",
    "requests",
    "scikit-learn",
    "numpy"
]

[tool.setuptools.packages.find]
where = ["."]