[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "universal_harvester"
version = "0.1.0"
description = "A comprehensive Copilot conversation harvester."
dependencies = [
    "playwright",
    "requests",
    "scikit-learn",
    "numpy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff"
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.setuptools.packages.find]
where = ["."]